--- a/assets/scss/modules/_koenig.scss
+++ b/assets/scss/modules/_koenig.scss
@@ -90,7 +90,7 @@
 .kg-gallery-card + .kg-gallery-card,
 .kg-image-card.kg-width-wide + .kg-gallery-card,
 .kg-image-card.kg-width-wide + .kg-image-card.kg-width-wide {
-	margin: -2.25em 0 3em;
+	margin: -2.25em auto 3em auto;
 }
 
 /* keep existing <pre> styles for code cards with captions */
